@@ -4,6 +4,7 @@ Date: ????
   Features:
     - Added option to reorder item groups
     - Reorders Miniloaders
+    - Reorders Deadlock loaders/beltboxes
 ---------------------------------------------------------------------------------------------------
 Version: 0.8.1
 Date: 2024-01-14
